Initial commit of project files

--- a/src/main/resources/templates/Locate_us.html
+++ b/src/main/resources/templates/Locate_us.html
@@ -23,7 +23,17 @@
 	</center>
 	<div class="location">
 <section class="location">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.2587642448775!2d77.69820641413502!3d12.955286818742959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae13afc62813f9%3A0xdcf1837520b28dfa!2sJSpiders%20Marathahalli!5e0!3m2!1sen!2sin!4v1674150882329!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3431.030586414574!2d76.57538557501705!3d30.770447174560053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fec762b3f8a33%3A0x7269b44d4e27c8ac!2sChandigarh%20University!5e0!3m2!1sen!2sin!4v1731352640123!5m2!1sen!2sin" 
+  width="600" 
+  height="450" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
+
     </section>
 
     </section>
@@ -34,8 +44,7 @@
                 <div>
                     <i class="contact-icon fas fa-home"></i>
                     <span>
-                        <h5>761/1, 3rd Floor, Outer Ring Rd, next to Chaitanya Techno School, near KLM Mall, Marathahalli, Bengaluru, Karnataka 560037</h5>
-                        <p>Bengaluru, India</p>
+                        <h5>NeckChand Hostel, NC2, Chandigarh University, Gharuan, Punjab, India</p>
                     </span>
                 </div>
 
@@ -50,7 +59,7 @@
                 <div>
                     <i class="contact-icon fas fa-envelope"></i>
                     <span>
-                        <h5>scanurag@gmail.com</h5>
+                        <h5>tushargarg1478@gmail.com</h5>
                         <p>Email us your query</p>
                     </span>
                 </div>
@@ -72,7 +81,7 @@
         <p style="text-align: center;">
         ”Explore our wide range of products designed to enhance your life."
         </p>
-            <p style="text-align: center;">© Copyright 2019 FoodFrenzy</pstyle="text-align: center;">
+            <p style="text-align: center;">© Copyright 2025 FoodFrenzy</pstyle="text-align: center;">
         </div>
     </section>
 </body>
