--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -41,7 +41,7 @@
 					<small style="color: red;" th:text="${error2}"></small><br />
 					<button type="submit" class="loginButton">Log in</button><br>
 
-					<p>I don't have an account? <a href="register.html" style="color: green;">Register Here</a></p>
+					<p>I don't have an account? <a th:href="@{/register}" style="color: green;">Register Here</a></p>
 				</form>
 			</div>
 		</div>
