--- a/src/main/resources/templates/Update_Admin.html
+++ b/src/main/resources/templates/Update_Admin.html
@@ -17,7 +17,7 @@
 			Admin_Number :
 			<input type="tel"  name="adminNumber" th:value="${admin.adminNumber}" pattern="[0-9]{10}"/> <br />
 			Admin_Email :
-			<input type="email" name="adminEmail" th:value="${admin.adminEmail}" /> <br />
+			<input type="email" name="" th:value="${admin.adminEmail}" /> <br />
 			
 			<button type="submit">Update_Admin</button>
 			
