--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>TEA : REGISTER</title>
+    <title>FoodFrenzy : Register</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,6 +56,7 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 16px;
+            width: 100%;
         }
 
         .registration button:hover {
@@ -76,25 +78,24 @@
             <div class="content">
                 <h2>Register</h2>
 
-            <form th:action="@{/register}" method="get" th:object="${userRegistration}">
-				    <label for="u_id">UserID:</label>
-                    <input type="text" id="u_id" name="u_id" th:field="*{u_id}" required><br>
-                    
-                    <label for="uemail">Email:</label>
-                    <input type="email" id="uemail" name="uemail" th:field="*{uemail}" required><br>
+                <form th:action="@{/register}" method="post" th:object="${user}">
+                    <label for="id">User ID:</label>
+                    <input type="text" id="id" th:field="*{id}" required><br>
 
                     <label for="uname">Username:</label>
-                    <input type="text" id="uname" name="uname" th:field="*{uname}" required><br>
+                    <input type="text" id="uname" th:field="*{uname}" required><br>
+
+                    <label for="uemail">Email:</label>
+                    <input type="email" id="uemail" th:field="*{uemail}" required><br>
 
                     <label for="unumber">Phone Number:</label>
-                    <input type="text" id="unumber" name="unumber" th:field="*{unumber}" required><br>
+                    <input type="text" id="unumber" th:field="*{unumber}" required><br>
 
                     <label for="upassword">Password:</label>
-                    <input type="password" id="upassword" name="upassword" th:field="*{upassword}" required><br>
+                    <input type="password" id="upassword" th:field="*{upassword}" required><br>
 
                     <button type="submit">Register</button>
                 </form>
-
 
                 <p th:text="${error}" style="color: red;"></p>
             </div>
